fixed match design on iphone

--- a/app/assets/stylesheets/layout/_utilities.scss
+++ b/app/assets/stylesheets/layout/_utilities.scss
@@ -85,6 +85,7 @@
     justify-content:center;
     align-items:center;
     height:90%;
+    text-align: center;
   }
 
   i {
@@ -100,34 +101,38 @@
 
   h3 {
     color:white;
-    position:absolute;
-    top:20%;
-    left:30%;
+    // position:absolute;
+    // top:20%;
+    // left:30%;
   }
 
-  #avatar-user_1{
-    position:absolute;
-    left:25%;
-    top: 30%;
+  #avatar-user_1, #avatar-user_2 {
+    margin: 0 -15px;
   }
 
-  #avatar-user_2 {
-    position:absolute;
-    right:27%;
-    top:30%;
-  }
+  // #avatar-user_1{
+  //   position:absolute;
+  //   left:25%;
+  //   top: 30%;
+  // }
+
+  // #avatar-user_2 {
+  //   position:absolute;
+  //   right:27%;
+  //   top:30%;
+  // }
   p {
     color:white;
     font-size:16px;
     text-align: center !important;
-    position:absolute;
-    bottom:45%;
+    // position:absolute;
+    // bottom:45%;
   }
 
-  #match-cta{
-    position:absolute;
-    bottom:35%;
-  }
+  // #match-cta{
+  //   position:absolute;
+  //   bottom:35%;
+  // }
 }
 
 .inline{
